samples/_failures_safe/1761283212_a129d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d58c0468.c: In function ‘main’:
./samples/SAFE/__tmp_d58c0468.c:155:5: error: expected expression at end of input
  155 |     for (size_t i = 0; i < compressed_data.size &&
      |     ^~~
./samples/SAFE/__tmp_d58c0468.c:155:5: error: expected declaration or statement at end of input
